# generic-report-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
outputs/: template.docx
src/: __init__.py  config.py  config.toml  constants.py  main.py
src/json/: prompt.json
src/utils/: __init__.py  llm.py  load_data.py  load_key.py  save_file.py  web_search.py
src/utils/graphs/: create_graph.py  format_graph.py  search_graph.py  smart_search_graph.py  states.py  task_graph.py
